		- VPTFile.close() was not using canonical paths, so buffers would not
		  close in some cases under jEdit 4.1.
		- Fixed a not very easy to reproduce misbehavior of the mouse clicks on
		  the tree changing the active buffer when they shouldn't.
		- projectPropertiesChanged was being fired when options dialog was
		  canceled.
		- fixed possible ClassCastException in FileImporter.java.

		Other changes:
		- removed the VPTNodeType class; it was just adding bloat, and could be
		  easily substituted by comparing the objects' classes.
		- removed the "saveOnChange" option. It's assumed to be true now.
		- remodeled VPTProject and the "flat lists" to map paths to any node
		  that reports itself as being "openable", not only VPTFile nodes. Some
		  methods have been deprecated in the process.
		- hacked ActionSeparator a little more to deal with nodes that are not
		  Root/Project/Directory/File.

VERSION 2.0.2
	[stefan kost]
		- rename action shows old value as initial selection
	[marcelo vanzin]
		- added add/remove file and property change events for projects
		- optional InfoViewer integration
		- option to use system icons for files
		- editable context menus (can add any jEdit action)
		- several import routines bug fixes
		- re-enabled "virtual folders"
		- possibility to rename files/folders without modifying the file name
		  on disk
		- use MicroStar's XML parser (bundled with jEdit) to avoid problems
		  with JAXP
		- some bug fixes in config file saving code
		- fixed for jEdit 4.2pre3

VERSION 2.0.0
	[marcelo vanzin]
	- Complete rewrite. Too many changes to list here. Most notable userland
	  changes are:
	  * project tree does not follow fs layout anymore. Any file/directory can
	    be added to any directory.
	  * project properties dialog is extensible, so other plugins can add their
	    own options to the project.
	  * other plugins can add entries to the toolbar and to the context menu.